--- a/Kitchen/Pages/Index.razor
+++ b/Kitchen/Pages/Index.razor
@@ -19,7 +19,7 @@ else
                 </div>
                 <img class="card-img-top imageThumbnail" src="@item.ImgUrl" />
                 <div class="card-footer">
-                    <button type="button" class="btn btn-primary">Details</button>
+                    <a href="/counter" class="btn btn-primary" role="button" aria-pressed="true">Details</a>
                 </div>
             </div>
         }
