--- a/Kitchen/Pages/_Host.cshtml
+++ b/Kitchen/Pages/_Host.cshtml
@@ -19,7 +19,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    @*<component type="typeof(App)" render-mode="ServerPrerendered" />*@
+    <component type="typeof(App)" render-mode="Server" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
