--- a/Kitchen/Pages/RecipeDetail.razor
+++ b/Kitchen/Pages/RecipeDetail.razor
@@ -11,7 +11,7 @@ else
     <div class="main">
         <card>
             <div class="card-header">
-                <h4><b>@Recipe.Title</b></h4>
+                <span>@Recipe.Title</span>
             </div>
             <img src="@Recipe.ImgUrl" class="img-fluid card-img-top" />
             <div class="card-body">
