--- a/Kitchen/Shared/MainLayout.razor
+++ b/Kitchen/Shared/MainLayout.razor
@@ -1,21 +1,15 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="container-fluid myContainer">
-    <div class="header">
-        <h1><span @onclick="BackHome">The Kitchen</span></h1>
-    </div>
-    <div class="main">
-        @Body
-    </div>
-    
+<div class="container">
+    <nav class="navbar navbar-light">
+        <div class="container-fluid">
+            <a href="/" class="navbar-brand">The Kitchen</a>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+        
+    @Body
 </div>
-
-@code {
-
-    @inject NavigationManager NavigationManager;
-
-    protected void BackHome()
-    {
-        NavigationManager.NavigateTo("/", false);
-    }
-}
