--- a/Kitchen/wwwroot/css/site.css
+++ b/Kitchen/wwwroot/css/site.css
@@ -4,34 +4,11 @@ html, body {
     font-family: 'Comfortaa';
 }
 
-.myContainer {
-    display: grid;
-    width:1000px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 100px 1fr;
-    grid-template-areas: 
-        'header'
-        'content'
+.card-header span {
+    font-weight: bolder;
+    font-size: larger;
 }
 
-.header {
-    grid-area: header;
-    padding: 20px;
-    padding-left: 5px;
-    flex-grow: 1;
-    font-family: 'Pacifico';
-}
-.main {
-    grid-area: content;
-}
-.main-overview {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-auto-rows: 400px;
-    column-gap: 20px;
-    grid-row-gap: 20px;
-    margin: 10px
-}
 .spinner {
     border: 16px solid silver;
     border-top: 16px solid red;
@@ -51,10 +28,7 @@ html, body {
         transform: rotate(360deg)
     }
 }
-.imageThumbnail {
-    height:285px;
-    width:auto;
-}
+
 
 /*============================================================================*/
 a, .btn-link {
